--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,23 +2,49 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #216545;
-    color: #f0f0f0;
-    padding: 1rem;
-    width:100%;
+    padding: 16px 24px;
+    background-color: #2c6633;
+  }
+  
+  .logoContainer {
+    display: flex;
+    align-items: center;
   }
   
   .logo {
-    font-weight: bold;
-    font-size: 1.5rem;
+    height: 50px;
   }
   
   .nav {
     display: flex;
   }
   
-  .navLink {
-    color: #f0f0f0;
-    text-decoration: none;
-    margin-left: 1rem;
+  .navList {
+    display: flex;
+    gap: 16px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
   }
+  
+  .navItem {
+    position: relative;
+  }
+  
+  .navLink {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    padding: 8px 12px;
+    transition: color 0.3s ease;
+  }
+  
+  .navLink:hover {
+    color: #d4edda;
+  }
+  
+  /* Classe per la pagina attiva */
+  .active {
+    border-bottom: 3px solid #d4edda;
+  }
+  
